@@ -2,7 +2,7 @@ sg3-utils (1.26-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Tue, 22 Jan 2008 23:00:00 +0100
+ -- Doug Gilbert <dgilbert@interlog.com>  Tue, 29 Jan 2008 16:00:00 +0100
 
 sg3-utils (1.25-0.1) unstable; urgency=low
 
